# gigpower

./: .gitignore  .readthedocs.yaml  05node_threephase_unbalanced_oscillation_03.dss  CI_TE.m  README.md  README.rst  cover_letter_tsg.docx  environment.yml  ftkcl.py  pyvenv.cfg  requirements.txt  setup.cfg  setup.py
gigpower/: LICENSE  README.md  requirements-dev.txt  requirements.txt  setup.cfg
gigpower/src/: setup.py
gigpower/src/circuit_mapper/: bus_group.py  capacitor.py  capacitor_group.py  load_group.py  solution_fbs.py
gigpower/src/gigpower/: capacitor_group.py  circuit.py  circuit_element.py  load.py  pretty_print.py  solution.py  solution_dss.py  solution_fbs.py  solution_nr3.py  transformer.py  transformer_group.py  voltage_regulator_group.py
gigpower/src/nr3_python/: 06node_threephase_meshed_unbalanced.dss  IEEE_13_Bus_allwye.dss  IEEE_13_Bus_allwye_noxfm_noreg.dss  IEEE_34_Bus_original.dss  IEEE_37_Bus_allwye.dss
gigpower/tests/: test_api.py  test_dss_compare.py  test_mapping_nr3.py  test_solution_fbs.py  test_vvc_nr3.py  v1_test_report.csv
gigpower/tests/test_compare_fbs_dss/: FBS_v_DSS_IEEE_13_Bus_allwye_constant_impedance-I.out.txt  FBS_v_DSS_IEEE_13_Bus_allwye_constant_impedance-Srx.out.txt  FBS_v_DSS_IEEE_13_Bus_allwye_constant_impedance-Stx.out.txt  FBS_v_DSS_IEEE_13_Bus_allwye_constant_impedance-V.out.txt  FBS_v_DSS_IEEE_13_Bus_allwye_constant_impedance-Vmag.out.txt  FBS_v_DSS_IEEE_13_Bus_allwye_constant_impedance-sV.out.txt  FBS_v_DSS_IEEE_13_Bus_allwye_constant_power-I.out.txt  FBS_v_DSS_IEEE_13_Bus_allwye_constant_power-Srx.out.txt  (+112 more)
(+1499 files in other folders)
