[metadata]
name = gigpower
version = 1.0.1
author = @elaguerta
author_email = ellaguerta@lbl.gov
description = Python libraries for solving powerflow
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lbl-eta/gigpower
project_urls =
    Bug Tracker = https://github.com/lbl-eta/gigpower/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.7
install_requires = 
    numpy >= '1.19.1'
    OpenDSSDirect.py >= '0.5.0'
    pandas >= '1.2.3'

[options.packages.find]
where = src